--- a/src/sass/components/_personal-info-card.scss
+++ b/src/sass/components/_personal-info-card.scss
@@ -132,3 +132,14 @@
       
     }
 }
+
+
+@media (max-width:500px){
+
+    .person-details-box{
+        width: auto;
+    }
+    .branches-box{
+        width: auto;
+    }
+}
