language switching Ui bugs exept details page

--- a/src/app/muilt-rows-slider/muilt-rows-slider.component.html
+++ b/src/app/muilt-rows-slider/muilt-rows-slider.component.html
@@ -93,5 +93,5 @@
         </div>
 
     </div>
-    <div class="swiper-button-prev swiper-button-white"></div>
-    <div class="swiper-button-next swiper-button-white"></div>
+    <div class="swiper-button-prev swiper-button-white muilt-row-slider-prev"></div>
+    <div class="swiper-button-next swiper-button-white  muilt-row-slider-next"></div>
