--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,8 +1,8 @@
 .white-colored-txt{
-color: $white;
+color: white;
 }
 .black-colored-txt{
-    color: $black;
+    color: black;
 }
 .big-font-placeholder{
     font-size: 1rem;
