--- a/src/sass/components/_info-card.scss
+++ b/src/sass/components/_info-card.scss
@@ -168,6 +168,8 @@
     }
     .address-container{
         margin-bottom: 1rem;
+        
+        display: flex;
     }
     .address{
         &-header{
