ux edits & language Ui issues fixed

--- a/src/app/pages/add-factory/add-factory.component.html
+++ b/src/app/pages/add-factory/add-factory.component.html
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col">
                 <div class="submit-btn-container">
-                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded" >اضف مصنعك</button>
+                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded p-btn" >اضف مصنعك</button>
                 </div>
             </div>
         </div>
