--- a/src/app/pages/factories/factories.component.html
+++ b/src/app/pages/factories/factories.component.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="submit-btn-container w-100  ">
-            <button class="btn--search btn--trasnparent btn-txt--black btn--lit-rounded btn-border--black w-100" >بحث</button>
+            <button class="btn--search btn--trasnparent btn-txt--black btn--lit-rounded btn-border--black w-100 p-btn" >بحث</button>
         </div>
 
         <div class="filter-accordion">
