--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -78,7 +78,7 @@
                     وشركات التأمين وشركات النقل والتخليص الجمركى.
                 </p>
                 <div class="read-more-container">
-                    <a href="#" class="btn--trasnparent btn-txt--green btn--lit-rounded read-more">المزيد</a>
+                    <button  class="btn--trasnparent btn-txt--green btn--lit-rounded read-more read-more-btn">المزيد</button>
                 </div>
             
         </div>
