--- a/src/app/slides-carousel/slides-carousel.component.html
+++ b/src/app/slides-carousel/slides-carousel.component.html
@@ -10,7 +10,8 @@
             <h3 class="caption-header">ابنى مصنعك مع فريق كبير</h3>
             <p class="caption-pagraph">شكل عشوائي أخذتها من نص، لتكوّن كتيّب بمثابة دليل أو مرجع شكلي لهذه الأحرف. خمسة قرون من الزمن لم تقضي على 
                 هذا النص، بل انه حتى صار مستخدماً وبشكله الأصلي في الطباعة والتنضيد الإلكتروني.</p>
-                <a href="#" class="btn--trasnparent btn-txt--white btn--lit-rounded btn--main create-factory-btn">اضف مصنعك الان </a>
+                <button  class="btn--trasnparent btn-txt--white btn--lit-rounded btn--main create-factory-btn">
+                    اضف مصنعك الان </button>
         </div>
         </ng-template>
 
@@ -22,7 +23,7 @@
             <h3 class="caption-header">ابنى مصنعك مع فريق كبير</h3>
             <p class="caption-pagraph">شكل عشوائي أخذتها من نص، لتكوّن كتيّب بمثابة دليل أو مرجع شكلي لهذه الأحرف. خمسة قرون من الزمن لم تقضي على 
                 هذا النص، بل انه حتى صار مستخدماً وبشكله الأصلي في الطباعة والتنضيد الإلكتروني.</p>
-                <a href="#" class="btn--trasnparent btn-txt--white btn--lit-rounded btn--main create-factory-btn">اضف مصنعك الان </a>
+                <button  class="btn--trasnparent btn-txt--white btn--lit-rounded btn--main create-factory-btn">اضف مصنعك الان </button>
 
         </div>
         </ng-template>
@@ -35,7 +36,7 @@
             <h3 class="caption-header">ابنى مصنعك مع فريق كبير</h3>
             <p class="caption-pagraph">شكل عشوائي أخذتها من نص، لتكوّن كتيّب بمثابة دليل أو مرجع شكلي لهذه الأحرف. خمسة قرون من الزمن لم تقضي على 
                 هذا النص، بل انه حتى صار مستخدماً وبشكله الأصلي في الطباعة والتنضيد الإلكتروني.</p>
-                <a href="#" class="btn--trasnparent btn-txt--white btn--lit-rounded btn--main create-factory-btn">اضف مصنعك الان </a>
+                <button  class="btn--trasnparent btn-txt--white btn--lit-rounded btn--main create-factory-btn">اضف مصنعك الان </button>
 
         </div>
         </ng-template>
