--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col">
                 <div class="submit-btn-container">
-                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded" >ارسال</button>
+                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded p-btn" >ارسال</button>
                 </div>
             </div>
         </div>
