--- a/src/app/pages/factory-details/factory-details.component.html
+++ b/src/app/pages/factory-details/factory-details.component.html
@@ -136,7 +136,7 @@
                       <h3 class="product-catalog-header__txt">كتالوج المنتجات</h3>
                     </div>
                     <catalog-slider></catalog-slider>
-                    <!-- <div class="category-details-container">
+                     <div class="category-details-container">
                         <div class="category-details">
                             <h4 class="category-details__txt">
                                 كابلات الطاقة:الكابلات المرنة،الاسلاك المستخدمة فى المبانى،الاسلاك الارضية، كابلات الطاقة ذات الجهد المنخفض، كابلات طاقة متوسطة وكبيرة وعالية الجهد
@@ -157,16 +157,16 @@
                                 كابلات الالياف الضوئية: ذات النوع الاحادى والالياف ذات الالياف المتعددة
                             </h4>
                         </div>
-                    </div> -->
+                    </div>  
               </div> 
           </div>
-<!-- <br> 
+  <br> 
 <br>
-          <div class="video-container">
-            <iframe width="1140" height="515" src="https://www.youtube.com/embed/pGqPjYALB50"
+          <div class="video-container" style="height: 35vw;">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pGqPjYALB50"
              frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             
-          </div> -->
+          </div> 
         </div>  
     </div>     
     </div>
