--- a/src/sass/components/_btns.scss
+++ b/src/sass/components/_btns.scss
@@ -54,12 +54,14 @@
         transition: .5s;
         line-height: 1;
         border:3px solid $primary-color;
+        position: relative;
         cursor: pointer;
         transition: .2s;
-        &:hover{
-            color: $white;
-            background-color: $primary-color;
-        }
+        overflow: hidden;
+        // &:hover{
+        //     color: $white;
+        //     background-color: $primary-color;
+        // }
     }
     &--search{
         padding-left:2.5rem;
@@ -74,16 +76,48 @@
         line-height: 1;
         cursor: pointer;
         transition: .2s;
-        &:hover{
-            color: $white;
-            background-color: $primary-color;
-            border:2px solid $primary-color !important;
-        }
+        position: relative;
+        overflow: hidden;
+        // &:hover{
+        //     color: $white;
+        //     background-color: $primary-color;
+        //     border:2px solid $primary-color !important;
+        // }
     }
 
     &-border{
         &--black{
         border:2px solid $black;
+    }
+}
+}
+
+.p-btn{
+
+    &:before {
+        content: "";
+        display: block;
+        background: $primary-color;
+        position: absolute;
+        width:200% ;
+        height: 500%;
+        transform: translate(-120%, -50%) translateZ(0);
+        z-index: -1;
+        border-radius: 100%;
+        transition: 0.4s cubic-bezier(0.4, 0, 1, 1);
+
+    }
+    &:hover{
+        border: solid  $primary-color !important;
+        color: white;
+        
+        &:before {
+        transform: translate(33%, -34%) translateZ(0);
+        @if($lang==en){
+        transform: translate(-33%, -34%) translateZ(0);
+
+        }
+       
     }
 }
 }
