--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -32,13 +32,20 @@ footer{
         padding-top:1.688rem;
         .site-map-tab{
             margin-#{$opposite-float}:  2.5rem;
+            transition: .3s;
             a{
                 font-size: 1.25rem;
                 line-height: 1.5rem;
                 font-family: $font-family-light;
                 color:$link-color;
                 text-decoration: none;
+
                 
+            }
+            &:hover{
+                a{
+                    color: $primary-color;
+                }
             }
         }
     }
