--- a/src/sass/pages/factory-details.scss
+++ b/src/sass/pages/factory-details.scss
@@ -64,10 +64,13 @@ margin-bottom: 1.5rem;
     .products-catalog-container{
         width: 90vw;
         margin-top: 1rem;
-
+        height: 100%;
     }
     .Ca-slide-block .swiper-slide-active .Ca-slide-item-image-container{
         width: 21.313rem; 
+    }
+    .category-details{
+        width: 100%;
     }
 
 }
