--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -31,7 +31,7 @@
     &::after {
         content: "";
         position: absolute;
-        z-index: -1;
+        z-index: -2;
         top: 0;
         left: 0;
         height: 100%;
@@ -77,11 +77,32 @@
             transition: .5s;
             line-height: 1;
             border:3px solid $primary-color;
-            &:hover{
-                border: 3px solid $primary-color-hover;
-                color: $primary-color-hover;
+            position: relative;
+            overflow: hidden;
+            &:before {
+                content: "";
+                display: block;
+                background: $primary-color;
+                position: absolute;
+                width:200% ;
+                height: 500%;
+                transform: translate(-120%, -50%) translateZ(0);
+                z-index: -1;
+                border-radius: 100%;
+                transition: 0.4s cubic-bezier(0.4, 0, 1, 1);
+    
             }
+            &:hover{
+                border: solid  $primary-color !important;
+                color: white;
+                &:before {
+                transform: translate(33%, -34%) translateZ(0);
+                @if($lang==en){
+                    transform: translate(-33%, -34%) translateZ(0);
             
+                    }
+            }
+        }
         }
     }
     
