--- a/src/sass/main-rtl.scss
+++ b/src/sass/main-rtl.scss
@@ -1,12 +1,9 @@
 ﻿@import 'base/_colors';
 
 @import 'base/_variables-rtl.scss';
+@import 'base/_typography';
+
 // Import the main style
 @import 'base/_global'; 
 @import 'base/_media-query';
-@import 'main.scss'; 
-
-
-
- 
-    
+@import 'main.scss';  
