--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'sass/main-ltr.scss';
+// @import 'sass/main-ltr.scss';
